[package]
name = "blocktime"
version = "0.1.0"
authors = ["lt <tabor.lukasz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["full"] }
reqwest = {version = "0.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"] }
hex = "0.4"
chrono = "0.4"
warp = "0.3"